...
import com.ctw.ctwpokedex.presentation.viewmodel.PokemonViewModel
import dagger.hilt.android.AndroidEntryPoint

@AndroidEntryPoint
class PokemonActivity : AppCompatActivity() {

    private var pokemonName: String = "defaultPoke"
    private lateinit var pokemonImage: ImageView
    private lateinit var pokemonHeight: TextView
    private lateinit var pokemonWeight: TextView
    private lateinit var pokemonTimestamp: TextView
    private lateinit var progressBar: ConstraintLayout
    private lateinit var errorView: ConstraintLayout
...
